# notethrough

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml  render_start.sh  requirements.txt  spotify_analysis.ipynb
backend/: requirements.txt
backend/app/: config.py  db.py  main.py  models.py  schemas.py  stats.py
docs/: progress.md  transition-plan.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: blend-console.tsx  discovery-journeys.tsx  effect-preview.tsx  feature-roadmap.tsx  header.tsx  hero.tsx  playlist-analytics.tsx  recommendations-panel.tsx  right-menu.tsx  spotify-checker.tsx  spotify-recommender.tsx  story-mode.tsx  studio-shell.tsx  track-explorer-panel.tsx  track-explorer.tsx
frontend/hooks/: use-track-search.ts  useBlendStudio.ts  (+2 more)
infra/: README.md
scripts/: csv_to_sqlite.py  dev-up.sh
services/: README.md
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/app/: cache.py  config.py  db.py  feedback.py  main.py  models.py  schemas.py  stats.py  utils.py
services/api-gateway/app/api/: __init__.py
services/api-gateway/app/api/routes/: auth.py  health.py  tracks.py
services/api-gateway/app/services/: ml_client.py  spotify.py  tracks.py  user_stats.py
services/api-gateway/scripts/: import_sqlite.py
services/api-gateway/tests/: conftest.py  test_health.py
services/ml-service/: Dockerfile  README.md  pyproject.toml
services/ml-service/app/: config.py  db.py  main.py  schemas.py
services/ml-service/app/api/: __init__.py
services/ml-service/app/api/routes/: health.py  ranking.py
services/ml-service/app/services/: scoring.py
static/: app.js  styles.css
templates/: index.html
(+25 files in other folders)
