[project]
name = "notethrough"
version = "0.1.0"
description = "Workspace configuration for the Notethrough music intelligence platform."
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
  "services/api-gateway",
  "services/ml-service"
]

[tool.uv.dependency-groups]
test = [
  "pytest==8.3.3",
  "pytest-asyncio==0.23.7",
  "asgi-lifespan==2.1.0"
]
