[project]
name = "notethrough-api-gateway"
version = "0.1.0"
description = "Edge-facing API gateway for the Notethrough platform."
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.30.1",
  "sqlalchemy[asyncio]==2.0.34",
  "psycopg[binary,pool]==3.2.8",
  "redis==5.0.7",
  "pydantic-settings==2.4.0",
  "python-dotenv==1.0.1",
  "numpy==2.3.3",
  "httpx==0.27.2"
]
