le[project]
name = "notethrough-ml-service"
version = "0.1.0"
description = "Model serving and ranking service for the Notethrough platform."
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn[standard]==0.30.1",
  "numpy==2.3.3",
  "pydantic-settings==2.4.0"
]

[tool.uv]
distribution = false
